tests/baselines/reference/couldNotSelectGenericOverload.errors.txt
tests/cases/compiler/couldNotSelectGenericOverload.ts(3,24): error TS2554: Expected 1 arguments, but got 2.
tests/cases/compiler/couldNotSelectGenericOverload.ts(7,25): error TS2554: Expected 1 arguments, but got 2.


==== tests/cases/compiler/couldNotSelectGenericOverload.ts (2 errors) ====
    function makeArray<T>(items: T[]): T[] { return items; }
    var b = [1, ""];
    var b1G = makeArray(1, ""); // any, no error
                           ~~
!!! error TS2554: Expected 1 arguments, but got 2.
    var b2G = makeArray(b); // any[]
    
    function makeArray2(items: any[]): any[] { return items; }
    var b3G = makeArray2(1, ""); // error
                            ~~
!!! error TS2554: Expected 1 arguments, but got 2.
    